@@ -1,5 +1,9 @@
 --- CHANGELOG ---
 
+--- PyFMI-trunk ---
+    * Fixed issue with estimating directional derivatives when the 
+      structure info is not used and the matrix has zero dim (ticket:5836)
+
 --- PyFMI-2.5.4 ---
     * Improved the performance of estimating directional derivatives
       (ticket:5569)
